--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.0.1"
   },
